# ascworld

./: .env  .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: chunk.h  noise.h  vec_math.h
src/game/: camera.cpp  camera.h  character_appearance.h  combat.cpp  combat.h  entity.h  firebase_client.cpp  firebase_client.h  game_session.cpp  game_session.h  host_authority.cpp  host_authority.h  inventory.cpp  inventory.h  item.h  networking.cpp  networking.h  player.cpp  player.h  player_state.h  root_state.h  save_system.cpp  save_system.h  state_sync.cpp  state_sync.h  weapon_meshes.cpp  weapon_meshes.h  world_state.cpp  world_state.h
src/input/: input.cpp  input.h
src/network/: client_session.cpp  client_session.h  env_config.h  firebase_client.cpp  firebase_client.h  host_session.cpp  host_session.h  lobby.cpp  lobby.h  net_common.h  peer_connection.cpp  peer_connection.h  remote_player.cpp  remote_player.h  signaling.cpp  signaling.h
src/rendering/: framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h
src/ui/hud/: cooldown_indicator.cpp  cooldown_indicator.h  crosshair.cpp  crosshair.h  death_overlay.cpp  death_overlay.h  health_bar.cpp  health_bar.h  hotbar.cpp  hotbar.h  hud.cpp  hud.h  kill_counter.cpp  kill_counter.h  kill_feed.cpp  kill_feed.h  pickup_prompt.cpp  pickup_prompt.h
src/ui/menu/: connecting.cpp  connecting.h  customize_screen.cpp  customize_screen.h  generating.cpp  generating.h  host_setup.cpp  host_setup.h  join_password.cpp  join_password.h  load_world.cpp  load_world.h  lobby.cpp  lobby.h  lobby_browser.cpp  lobby_browser.h  main_menu.cpp  main_menu.h  menu_common.cpp  menu_common.h  mode_select.cpp  mode_select.h  pause_overlay.cpp  pause_overlay.h  play_menu.cpp  play_menu.h  username.cpp  username.h
src/world/: buildings.cpp  buildings.h  city_layout.cpp  city_layout.h  city_materials.h  prefabs.h  structures.cpp  structures.h  terrain.cpp  terrain.h  vegetation.cpp  vegetation.h  world.cpp  world.h
src/world/prefabs/: city_materials.h
src/world/prefabs/building_mounted/: antenna.cpp  antenna.h  pipe_run.cpp  pipe_run.h  sign_board.cpp  sign_board.h
src/world/prefabs/interior/: debris.cpp  debris.h  pillar.cpp  pillar.h  shelf_rack.cpp  shelf_rack.h  table.cpp  table.h  terminal.cpp  terminal.h
src/world/prefabs/street_props/: barricade.cpp  barricade.h  bench.cpp  bench.h  bollard.cpp  bollard.h  dumpster.cpp  dumpster.h  fire_barrel.cpp  fire_barrel.h  streetlamp.cpp  streetlamp.h  trash_can.cpp  trash_can.h
src/world/prefabs/structural/: door_frame.cpp  door_frame.h  rubble_pile.cpp  rubble_pile.h  staircase.cpp  staircase.h
src/world/prefabs/vehicles/: crate.cpp  crate.h  vehicle_husk.cpp  vehicle_husk.h
